# bookshelf

./: .gitignore  README  configure.ac  meson.build
data/: Makefile.am  cat.xml  meson.build  rp-bookshelf.desktop.in  rp_bookshelf.ui
data/icons/: Makefile.am
data/icons/hicolor/: Makefile.am
data/icons/hicolor/16x16/apps/: Makefile.am
data/icons/hicolor/24x24/apps/: Makefile.am
data/icons/hicolor/32x32/apps/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
debian/: changelog  control  copyright  rp-bookshelf.postinst
po/: POTFILES.in  en_GB.po  hy.po  it.po  ko.po  pt.po  pt_BR.po  sk.po  zh_CN.po
proto/: meson.build
src/: Makefile.am  activate.c  activate.h  meson.build  rp_bookshelf.c
